# simple-elpmpp02-rs

./: Cargo.toml  README.md
script/: .gitignore  elpmpp02.py  generate_testcases.py
src/: coeff.rs  lib.rs
